--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <body>
-  <h1>ReBECKY!</h1>
-  <p>I LOVE YOU!</p>
+  <h1 class="Header">ReBECKY!</h1>
+  <p class="Love">I LOVE YOU!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
