--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<link href="./style.css">
+<link href="./style.css" rel="stylesheet">
 <body>
   <h1 class="Header">ReBECKY!</h1>
   <p class="Love">I LOVE YOU!</p>
